United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7090259 Fix hotspot sources to build with old compilers
7090259 : Fix hotspot sources to build with old compilers

Details
Type:
Bug
Submit Date:
2011-09-13
Status:
Closed
Updated Date:
2011-10-07
Project Name:
JDK
Resolved Date:
2011-09-30
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
8-pool
Fixed Versions:
hs22

Related Reports
Backport:
Backport:

Sub Tasks

Description
Several issues were identified when we tried to build HS22 for jdk6u29:

"/tmp/jprt/P1/170801.amurillo/source/src/share/vm/opto/block.cpp", line 1372: Warning (Anachronism): Formal argument 4 of type extern "C" int(*)(const void*,const void*) in call to std::qsort(void*, unsigned, unsigned, extern "C" int(*)(const void*,const void*)) is being passed int(*)(const void*,const void*).

"/tmp/jprt/P1/170801.amurillo/source/src/share/vm/classfile/javaClasses.cpp", line 2704: Error: Overloading ambiguity between "methodOop::operator methodOopDesc*() const" and "oop::operator void*() const".

"/opt/jprt/temp/P1/170801.amurillo/source/src/share/vm/gc_implementation/g1/g1ErgoVerbose.hpp", line 62: Warning: Identifier expected instead of "}".
1 Warning(s) detected.p

"/opt/jprt/temp/P1/170801.amurillo/source/src/share/vm/oops/instanceRefKlass.cpp", line 355: Warning: A non-POD object of type "oop" passed as a variable argument to function "FormatBuffer<256>::FormatBuffer(const char*, ...)".

Also vs2003 generates incorrect optimized code for next line in oops/methodOop.cpp:

        QuickSort::sort<oop>((oop*)(methods->base()), length, method_comparator<oop>, idempotent);

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-24
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/f94227b6117b
                                     
2011-09-14



Hardware and Software, Engineered to Work Together