7090259: Fix hotspot sources to build with old compilers

Fixed warnings which prevent building VM with old compilers.

Reviewed-by: never